--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,9 @@ body {
 .main-nav .active:nth-child(4) a {
 	background-color: #ff8a89;
 }
+.main-nav .active:nth-child(5) a {
+	background-color: #8e95ff;
+}
 .icons{
 	display: flex;
 	flex-direction: column;
@@ -364,10 +367,6 @@ body {
 .section-three .sec1>h3{
 	margin-top: 66px;
 }
-.sec4_imgs{
-	left: -69px;
-    top: 54%;
-}
 .sec3_d1{
 	left: -101px;
 	width: 390px;
@@ -385,8 +384,27 @@ body {
 .section-four .sec1>h3{
 	margin-top: 66px;
 }
+.sec4_imgs{
+	left: -69px;
+    top: 54%;
+}
 /* End section 4 -------------------------------------------------------- */
 
+/* section 5 -------------------------------------------------------- */
+.section-five .Rectangle-364{
+	background-color: #8e95ff;
+}
+.section-five .sec1>h3>b{
+	color: #8e95ff;
+}
+.section-five .sec1>h3{
+	margin-top: 66px;
+}
+.sec5_imgs{
+	left: -46px;
+    top: 54%;
+}
+/* End section 5 -------------------------------------------------------- */
 
 @media (min-width:768px) {
 
@@ -455,16 +473,16 @@ body {
 	.mobile{
 		display: block;
 		width: 100%;
-		height: 280px;
+		height: 80px;
 		background-color: #e8eaff;
 		border-radius: 20px;
 	}
-	.section-three .mobile{
+	/* .section-three .mobile{
 		height: 240px;
 	}
 	.section-four .mobile{
 		height: 240px;
-	}
+	} */
 	.section-img{
 		width: 100%;
 	}
@@ -472,7 +490,8 @@ body {
 		text-align: left;
 	}
 	.display_f2{
-		justify-content: flex-end;
+		/* justify-content: flex-end; */
+		padding-top: 60px;
 	}
 	.menu{
 		display: block;
@@ -536,5 +555,8 @@ body {
 	.icon-mb{
 		width: 31px;
 		margin: 8px;
+	}
+	.Lets-Finin{
+		font-size: 10px;
 	}
 }
